--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td> <img src="https://lh3.googleusercontent.com/p/AF1QipOXd0cpDWfE7W3luYA_nsQb7PduMgdN5tq8k_Gs=w960-h960-n-o-v1" alt="rldpb"></td>
+            <td> <img src="images/g.png" alt="rldpb"></td>
             <td><hr>
                 <h1>🏬raj luxmi dona pattal bhandar🏬</h1>
-                <br>
                 <h3>owned by🤟</h3>
-                <br>
-                <h2>nitin jain👍</h2></td>
+               <h2>nitin jain👍</h2></td>
                 <hr size="3" noshade>
         </tr>
         
