--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <p><em><a href="https://rajluxmi-dona-pattal-bhandar.business.site/?utm_source=gmb&utm_medium=referral"><strong>founder of RLDPB</strong></a></strong></em></p>
     <p><i>founder of RLDPB</i></p>
     <ul>
-        <li>ferre</li>
-        <li>ferrsec</li>
+        <li>PLEASE PROVIDE US A CHANCE</li>
+        <li> TO SERVE YOU BETTER</li>
     </ul>
         <ol>
             <li><a href="hobby.html">my hobbies</a></li>
