--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
     <hr>
    <label>your message:</label><br>
    <textarea name="your message" rows="10" cols="30"></textarea>
-    <input type="file" name="" value="">
+    <input type="file" name="" value=""><br>
    <input type="submit" name="">
  
 </form>
