--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
     <input type="checkbox" name="" value=""><br>
     <hr>
    <label>your message:</label><br>
-   <textarea name="your message" rows="10" cols="30"></textarea>
+   <textarea name="your message" rows="10" cols="30"></textarea><br>
     <input type="file" name="" value=""><br>
    <input type="submit" name="">
  
