--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td> <img src="g.png" alt="rldpb"></td>
+            <td> <img src="g.png" width="150" height="150" alt="rldpb"></td>
             <td><hr>
                 <h1>🏬raj luxmi dona pattal bhandar🏬</h1>
                 <h3>owned by🤟</h3>
