--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td> <img src="g.png" width="10" height="10" alt="rldpb"></td>
+            <td> <img src="g.png" width="80" height="80" alt="rldpb"></td>
             <td><hr>
-                <h1>🏬raj luxmi dona pattal bhandar🏬</h1>
+                <h1>Raj lLuxmi Dona Pattal Bhandar</h1>
                 <h3>owned by🤟</h3>
                <h2>nitin jain👍</h2></td>
                 <hr size="3" noshade>
