--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <tr>
             <td> <img src="g.png" width="80" height="80" alt="rldpb"></td>
             <td><hr>
-                <h1>Raj lLuxmi Dona Pattal Bhandar</h1>
+                <h1>Raj Luxmi Dona Pattal Bhandar</h1>
                 <h3>owned by🤟</h3>
                <h2>nitin jain👍</h2></td>
                 <hr size="3" noshade>
